# agent-docs-skill

./: LICENSE  README.md  SKILL.md  agent-docs-skill.skill
evals/: evals.json
evals/fixtures/on-main-branch/: package.json
evals/fixtures/on-main-branch/.agents/docs/: core.md  index.md  stack.md
evals/fixtures/on-main-branch/.agents/docs/modules/: core.md
evals/fixtures/polyglot-monorepo/: package.json
evals/fixtures/polyglot-monorepo/apps/api/: package.json
evals/fixtures/polyglot-monorepo/apps/api/src/: index.ts
evals/fixtures/polyglot-monorepo/apps/web/: package.json
evals/fixtures/polyglot-monorepo/apps/web/components/: Dashboard.tsx
evals/fixtures/polyglot-monorepo/apps/web/src/: index.ts
evals/fixtures/preexisting-docs/: package.json
evals/fixtures/preexisting-docs/.agents/docs/: core.md  index.md  stack.md
evals/fixtures/preexisting-docs/.agents/docs/modules/: auth.md  users.md
evals/fixtures/preexisting-docs/src/auth/: session.ts
evals/fixtures/preexisting-docs/src/users/: repo.ts
evals/fixtures/py-fastapi/: pyproject.toml
evals/fixtures/py-fastapi/app/: main.py
evals/fixtures/py-fastapi/app/orders/: router.py
evals/fixtures/py-fastapi/app/users/: router.py
evals/fixtures/ts-next/: package.json  tailwind.config.ts  tsconfig.json
evals/fixtures/ts-next/components/: Button.tsx
evals/fixtures/ts-next/src/auth/: index.ts  session.ts
evals/fixtures/ts-next/src/billing/: charge.ts  index.ts
references/: spec.md  vercel-rationale.md
